--- a/publications.html
+++ b/publications.html
@@ -55,9 +55,13 @@
             <div class="grid3-content">
                 <ul>
 		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training. ArXiv:2503.08489, 2025.
+			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>]
 		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. ArXiv:2503.02386, 2025.
+			    [<a href="https://arxiv.org/abs/2503.02386">paper</a>]
 		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng<b>*</b>. An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring. ArXiv:2502.07602, 2025.
+			    [<a href="https://arxiv.org/abs/2502.07602">paper</a>]
                     <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition. ArXiv:2501.04833, 2025.
+			    [<a href="https://arxiv.org/abs/2501.04833">paper</a>]
                 </ul>
             </div>
 	    
@@ -65,6 +69,7 @@
             <div class="grid3-content">
                 <ul>
                     <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Yong Xia. Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition. Computational Optimization and Applications, 1-33, 2025.
+			    [<a href="https://link.springer.com/article/10.1007/s10589-025-00668-x">paper</a>]
                 </ul>
             </div>
 
@@ -73,10 +78,15 @@
             <div class="grid3-content">
                 <ul>
                     <li> Chengjing Wang, Xile Zhao, <b>Qingsong Wang</b>, Zepei Ma, Peipei Tang<b>*</b>. An inexact proximal majorization-minimization algorithm for remote sensing image stripe noise removal. Numerical Algorithms, 97(3), 1119-1139, 2024.
+			    [<a href="https://link.springer.com/article/10.1007/s11075-023-01743-2">paper</a>]
                     <li> <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Deren Han. A Momentum Accelerated Algorithm for ReLU-based Nonlinear Matrix Decomposition. IEEE Signal Processing Letters, 31, 2865-2869, 2024.
+			    [<a href="https://ieeexplore.ieee.org/document/10706860">paper</a>]  [<a href="https://github.com/nothing2wang/NMD-TM">code</a>]
                     <li> <b>Qingsong Wang</b>, Deren Han, Wenxing Zhang<b>*</b>. A customized inertial proximal alternating minimization for SVD-free robust principal component analysis. Optimization, 73(8), 2387-2412, 2024.
+			    [<a href="https://www.tandfonline.com/doi/full/10.1080/02331934.2023.2230975">paper</a>]
                     <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. Stochastic Gauss–Seidel type inertial proximal alternating linearized minimization and its application to proximal neural networks. Mathematical Methods of Operations Research, 99(1), 39-74, 2024.
-                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui<b>*</b>, Deren Han. A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems. Proceedings of the AAAI Conference on Artificial Intelligence. 38(14), 15580-15588, 2024.
+			    [<a href="https://link.springer.com/article/10.1007/s00186-024-00851-6">paper</a>]
+                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui<b>*</b>, Deren Han. A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems. Proceedings of the AAAI Conference on Artificial Intelligence. 38(14), 15580-15588, 2024. 
+			    [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29485">paper</a>] [<a href="https://github.com/nothing2wang/BPSGE-Algorithm">code</a>]
                 </ul>
             </div>
 
@@ -85,10 +95,13 @@
             <div class="grid3-content">
                 <ul>
                     <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity. Optimization Methods and Software, 38(5), 914-946, 2023.
-                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems. Applied Numerical Mathematics,  189, 66-87, 2023.  [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0168927423000855">paper</a>] 
-                        [<a href="https://github.com/nothing2wang/NiPALM-Algorithm">code</a>]
+			    [<a href="https://www.tandfonline.com/doi/abs/10.1080/10556788.2023.2189717">paper</a>] [<a href="https://github.com/nothing2wang/BPSGE-Algorithm">code</a>]
+                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems. Applied Numerical Mathematics,  189, 66-87, 2023. 
+			    [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0168927423000855">paper</a>]  [<a href="https://github.com/nothing2wang/NiPALM-Algorithm">code</a>]
                     <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han<b>*</b>. Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems. Journal of Computational and Applied Mathematics, 423, 114948, 2023.
+			    [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0377042722005465">paper</a>]
                     <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han<b>*</b>. Accelerated doubly stochastic gradient descent for tensor CP decomposition. Journal of Optimization Theory and Applications, 197(2), 665-704, 2023.
+			     [<a href="https://link.springer.com/article/10.1007/s10957-023-02193-5">paper</a>]  [<a href="https://github.com/nothing2wang/DS-MVR-Algorithm">code</a>]
                 </ul>
             </div>
 
@@ -97,7 +110,10 @@
             <div class="grid3-content">
                 <ul>
                     <li> Dunbiao Niu, Chengjing Wang<b>*</b>, Peipei Tang, <b>Qingsong Wang</b>, Enbin Song. An efficient algorithm for a class of large-scale support vector machines exploiting hidden sparsity. IEEE Transactions on Signal Processing, 70, 5608-5623, 2022.
+			    [<a href="https://ieeexplore.ieee.org/document/9947311">paper</a>] 
                     <li> Yifan Shao, <b>Qingsong Wang</b>, Deren Han<b>*</b>. Efficient methods for convex problems with Bregman Barzilai-Borwein step sizes. Pacific Journal of Optimization, 18(2), 333-348, 2022.
+			    [<a href="http://www.yokohamapublishers.jp/online2/pjov18-2.html">paper</a>] 
+			    
                 </ul>
             </div>
 
@@ -105,6 +121,7 @@
             <div class="grid3-content">
                 <ul>
                     <li> <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Deren Han. A momentum block-randomized stochastic algorithm for low-rank tensor CP decomposition. Pacific Journal of Optimization, 17(3), 433-452, 2021.
+			     [<a href="http://www.yokohamapublishers.jp/online2/pjov18-2.html">paper</a>] 
                 </ul>
             </div>
 
@@ -112,7 +129,9 @@
             <div class="grid3-content">
                 <ul>
 		    <li> <b>Qingsong Wang</b>,  Chengjing Wang<b>*</b>, Peipei Tang, Dunbiao Niu. An inexact dual alternating direction method of multipliers for image decomposition and restoration. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
+			    [<a href="https://worldscientific.com/doi/10.1142/S0217595920400102">paper</a>] 
 		    <li> 史冰冰, <b>王青松</b><b>*</b>. 基于对偶的不精确交替方向乘子法求解核范数正则化最小二乘问题. 高校应用数学学报: A 辑, 35(2), 181-190, 2020.
+			     [<a href="https://www.zjujournals.com/amjcua/CN/abstract/abstract41396.shtml">paper</a>] 
                 </ul>
             </div>
 
