--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,7 @@
         <div class="grid3-year"> <h3> Preprints <h3> </div>
             <div class="grid3-content">
                 <ul>
+		    <li> Hao Li, Xihong Yan, <b>Qingsong Wang</b><b>*</b>. A convex combination proximal centers primal-dual hybrid gradient algorithm for linearly constrained convex programming. Submitted, 2025.
 		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training. ArXiv:2503.08489, 2025.
 			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>]
 		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. ArXiv:2503.02386, 2025.
@@ -62,6 +63,7 @@
 			    [<a href="https://arxiv.org/abs/2502.07602">paper</a>]
                     <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>. Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition. ArXiv:2501.04833, 2025.
 			    [<a href="https://arxiv.org/abs/2501.04833">paper</a>]
+		   <li>  <b>Qingsong Wang</b>, Deren Han<b>*</b>. An Improved Inertial Stochastic Proximal Alternating Linearized Minimization for Nonconvex Optimization in Machine Learning. Submitted, 2025.
                 </ul>
             </div>
 	    
