--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
 		   <!-- <li>  <b>Qingsong Wang</b><b>*</b>. An Accelerated Bregman Algorithm for ReLU-based Symmetric Matrix Decomposition. Submitted, 2025. -->
 		   <!-- <li> Hao Li, Xihong Yan, <b>Qingsong Wang</b><b>*</b>. A convex combination proximal centers primal-dual hybrid gradient algorithm for linearly constrained convex programming. Submitted, 2025. -->
 		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training. ArXiv:2503.08489, 2025.
-			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>]
+			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>] [<a href="https://github.com/yancc103/TIAM">code</a>]
 		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition. ArXiv:2503.02386, 2025.
 			    [<a href="https://arxiv.org/abs/2503.02386">paper</a>]
 		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng<b>*</b>. An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring. ArXiv:2502.07602, 2025.
