--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
 		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. <i>A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training</i>. ArXiv:2503.08489, 2025.
 			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>] [<a href="https://github.com/yancc103/TIAM">code</a>]
 		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. <i>An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition</i>. ArXiv:2503.02386, 2025.
-			    [<a href="https://arxiv.org/abs/2503.02386">paper</a>]
+			    [<a href="https://arxiv.org/abs/2503.02386">paper</a>] [<a href="https://github.com/nothing2wang/NMD-AAPB">code</a>]
 		    <li> <b>Qingsong Wang</b>, Shengze Xu, Xiaojiao Tong, Tieyong Zeng<b>*</b>. <i>An Improved Optimal Proximal Gradient Algorithm for Non-Blind Image Deblurring</i>. ArXiv:2502.07602, 2025.
 			    [<a href="https://arxiv.org/abs/2502.07602">paper</a>]
                     <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>. <i>Multi-step Inertial Accelerated Doubly Stochastic Gradient Methods for Block Term Tensor Decomposition</i>. ArXiv:2501.04833, 2025.
