--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,8 @@
         <div class="grid3-year"> <h3> Preprints <h3> </div>
             <div class="grid3-content">
                 <ul>
-		   <!-- <li>  <b>Qingsong Wang</b><b>*</b>. An Accelerated Bregman Algorithm for ReLU-based Symmetric Matrix Decomposition. Submitted, 2025. -->
+		   <li>  <b>Qingsong Wang</b><b>*</b>. An Accelerated Bregman Algorithm for ReLU-based Symmetric Matrix Decomposition. ArXiv:2503.16846, 2025.
+			   [<a href="https://arxiv.org/abs/2503.16846">paper</a>]
 		   <!-- <li> Hao Li, Xihong Yan, <b>Qingsong Wang</b><b>*</b>. A convex combination proximal centers primal-dual hybrid gradient algorithm for linearly constrained convex programming. Submitted, 2025. -->
 		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. <i>A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training</i>. ArXiv:2503.08489, 2025.
 			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>] [<a href="https://github.com/yancc103/TIAM">code</a>]
