--- a/publications.html
+++ b/publications.html
@@ -72,7 +72,7 @@
         <div class="grid3-year"> <h3> 2025 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Yong Xia. <i>Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition</i>. Computational Optimization and Applications, 1-33, 2025.
+                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Yong Xia. <i>Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition</i>. Computational Optimization and Applications, 91, 201–233, 2025.
 			    [<a href="https://link.springer.com/article/10.1007/s10589-025-00668-x">paper</a>]
                 </ul>
             </div>
