--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,8 @@
         <div class="grid3-year"> <h3> Preprints <h3> </div>
             <div class="grid3-content">
                 <ul>
+		<li>  Wenchao Xie, Jiawei Xu, Zheng Peng, <b>Qingsong Wang</b><b>*</b>. <i>Efficient QR-Based CP Decomposition Acceleration via Dimension Tree and Extrapolation</i>. ArXiv:2503.18759, 2025.
+			   [<a href="https://arxiv.org/abs/2503.18759">paper</a>]
 		   <li>  <b>Qingsong Wang</b><b>*</b>. <i>An Accelerated Bregman Algorithm for ReLU-based Symmetric Matrix Decomposition</i>. ArXiv:2503.16846, 2025.
 			   [<a href="https://arxiv.org/abs/2503.16846">paper</a>]
 		   <!-- <li> Hao Li, Xihong Yan, <b>Qingsong Wang</b><b>*</b>. A convex combination proximal centers primal-dual hybrid gradient algorithm for linearly constrained convex programming. Submitted, 2025. -->
