--- a/publications.html
+++ b/publications.html
@@ -55,9 +55,9 @@
             <div class="grid3-content">
                 <ul>
 		<li>  Wenchao Xie, Jiawei Xu, Zheng Peng, <b>Qingsong Wang</b><b>*</b>. <i>Efficient QR-Based CP Decomposition Acceleration via Dimension Tree and Extrapolation</i>. ArXiv:2503.18759, 2025.
-			   [<a href="https://arxiv.org/abs/2503.18759">paper</a>]
+			   [<a href="https://arxiv.org/abs/2503.18759">paper</a>] [<a href="https://github.com/youmengx658/ALS-QR-BRE">code</a>]
 		   <li>  <b>Qingsong Wang</b><b>*</b>. <i>An Accelerated Bregman Algorithm for ReLU-based Symmetric Matrix Decomposition</i>. ArXiv:2503.16846, 2025.
-			   [<a href="https://arxiv.org/abs/2503.16846">paper</a>]
+			   [<a href="https://arxiv.org/abs/2503.16846">paper</a>] [<a href="https://github.com/nothing2wang/NMD-AAPB">code</a>]
 		    <li> Hao Li, Xihong Yan, <b>Qingsong Wang</b><b>*</b>. A convex combination proximal centers primal-dual hybrid gradient algorithm for linearly constrained convex programming. Submitted, 2025. 
 		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. <i>A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training</i>. ArXiv:2503.08489, 2025.
 			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>] [<a href="https://github.com/yancc103/TIAM">code</a>]
