--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
 			   [<a href="https://arxiv.org/abs/2503.18759">paper</a>] [<a href="https://github.com/youmengx658/ALS-QR-BRE">code</a>]
 		   <li>  <b>Qingsong Wang</b><b>*</b>. <i>An Accelerated Bregman Algorithm for ReLU-based Symmetric Matrix Decomposition</i>. ArXiv:2503.16846, 2025.
 			   [<a href="https://arxiv.org/abs/2503.16846">paper</a>] [<a href="https://github.com/nothing2wang/NMD-AAPB">code</a>]
-		    <li> Hao Li, Xihong Yan, <b>Qingsong Wang</b><b>*</b>. A convex combination proximal centers primal-dual hybrid gradient algorithm for linearly constrained convex programming. Submitted, 2025. 
+		    <li> Hao Li, Xihong Yan, <b>Qingsong Wang</b><b>*</b>. A Convex Combination proximal Centers Primal-dual Hybrid Gradient Algorithm for Linearly Constrained Convex Programming. Submitted, 2025. 
 		    <li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. <i>A Triple-Inertial Accelerated Alternating Optimization Method for Deep Learning Training</i>. ArXiv:2503.08489, 2025.
 			    [<a href="https://arxiv.org/abs/2503.08489">paper</a>] [<a href="https://github.com/yancc103/TIAM">code</a>]
 		    <li> <b>Qingsong Wang</b>, Yunfei Qu, Chunfeng Cui, Deren Han<b>*</b>. <i>An Accelerated Alternating Partial Bregman Algorithm for ReLU-based Matrix Decomposition</i>. ArXiv:2503.02386, 2025.
@@ -74,7 +74,7 @@
         <div class="grid3-year"> <h3> 2025 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Yong Xia. <i>Inertial accelerated stochastic mirror descent for large-scale generalized tensor CP decomposition</i>. Computational Optimization and Applications, 91(1), 201–233, 2025.
+                    <li> Zehui Liu, <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Yong Xia. <i>Inertial Accelerated Stochastic Mirror Descent for Large-scale Generalized Tensor CP Decomposition</i>. Computational Optimization and Applications, 91(1), 201–233, 2025.
 			    [<a href="https://link.springer.com/article/10.1007/s10589-025-00668-x">paper</a>]
                 </ul>
             </div>
@@ -83,15 +83,15 @@
         <div class="grid3-year"> <h3> 2024 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Chengjing Wang, Xile Zhao, <b>Qingsong Wang</b>, Zepei Ma, Peipei Tang<b>*</b>. <i>An inexact proximal majorization-minimization algorithm for remote sensing image stripe noise removal</i>. Numerical Algorithms, 97(3), 1119-1139, 2024.
+                    <li> Chengjing Wang, Xile Zhao, <b>Qingsong Wang</b>, Zepei Ma, Peipei Tang<b>*</b>. <i>An Inexact Proximal Majorization-Minimization Algorithm for Remote Sensing Image Stripe Noise Removal</i>. Numerical Algorithms, 97(3), 1119-1139, 2024.
 			    [<a href="https://link.springer.com/article/10.1007/s11075-023-01743-2">paper</a>]
                     <li> <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Deren Han. <i>A Momentum Accelerated Algorithm for ReLU-based Nonlinear Matrix Decomposition</i>. IEEE Signal Processing Letters, 31, 2865-2869, 2024.
 			    [<a href="https://ieeexplore.ieee.org/document/10706860">paper</a>]  [<a href="https://github.com/nothing2wang/NMD-TM">code</a>]
-                    <li> <b>Qingsong Wang</b>, Deren Han, Wenxing Zhang<b>*</b>. <i>A customized inertial proximal alternating minimization for SVD-free robust principal component analysis</i>. Optimization, 73(8), 2387-2412, 2024.
+                    <li> <b>Qingsong Wang</b>, Deren Han, Wenxing Zhang<b>*</b>. <i>A Customized Inertial Proximal Alternating Minimization for SVD-free Robust Principal Component Analysis</i>. Optimization, 73(8), 2387-2412, 2024.
 			    [<a href="https://www.tandfonline.com/doi/full/10.1080/02331934.2023.2230975">paper</a>]
-                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>Stochastic Gauss–Seidel type inertial proximal alternating linearized minimization and its application to proximal neural networks</i>. Mathematical Methods of Operations Research, 99(1), 39-74, 2024.
+                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>Stochastic Gauss–Seidel Type Inertial Proximal Alternating Linearized Minimization and its Application to Proximal Neural Networks</i>. Mathematical Methods of Operations Research, 99(1), 39-74, 2024.
 			    [<a href="https://link.springer.com/article/10.1007/s00186-024-00851-6">paper</a>]
-                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui<b>*</b>, Deren Han. <i>A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems</i>. Proceedings of the AAAI Conference on Artificial Intelligence. 38(14), 15580-15588, 2024. 
+                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui<b>*</b>, Deren Han. <i>A Bregman Proximal Stochastic Gradient Method with Extrapolation for Nonconvex Nonsmooth Problems</i>. Proceedings of the AAAI Conference on Artificial Intelligence. 38(14), 15580-15588, 2024. 
 			    [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29485">paper</a>] [<a href="https://github.com/nothing2wang/BPSGE-Algorithm">code</a>]
                 </ul>
             </div>
@@ -100,13 +100,13 @@
         <div class="grid3-year"> <h3> 2023 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity</i>. Optimization Methods and Software, 38(5), 914-946, 2023.
+                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>A Bregman Stochastic Method for Nonconvex Nonsmooth Problem Beyond Global Lipschitz Gradient Continuity</i>. Optimization Methods and Software, 38(5), 914-946, 2023.
 			    [<a href="https://www.tandfonline.com/doi/abs/10.1080/10556788.2023.2189717">paper</a>] [<a href="https://github.com/nothing2wang/BPSGE-Algorithm">code</a>]
-                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems</i>. Applied Numerical Mathematics,  189, 66-87, 2023. 
+                    <li> <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>A Generalized Inertial Proximal Alternating Linearized Minimization Method for Nonconvex Nonsmooth Problems</i>. Applied Numerical Mathematics,  189, 66-87, 2023. 
 			    [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0168927423000855">paper</a>]  [<a href="https://github.com/nothing2wang/NiPALM-Algorithm">code</a>]
-                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han<b>*</b>. <i>Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems</i>. Journal of Computational and Applied Mathematics, 423, 114948, 2023.
+                    <li> <b>Qingsong Wang</b>, Zehui Liu, Chunfeng Cui, Deren Han<b>*</b>. <i>Inertial Accelerated SGD Algorithms for Solving Large-scale Lower-rank Tensor CP Decomposition Problems</i>. Journal of Computational and Applied Mathematics, 423, 114948, 2023.
 			    [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0377042722005465">paper</a>]
-                    <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han<b>*</b>. <i>Accelerated doubly stochastic gradient descent for tensor CP decomposition</i>. Journal of Optimization Theory and Applications, 197(2), 665-704, 2023.
+                    <li> <b>Qingsong Wang</b>, Chunfeng Cui, Deren Han<b>*</b>. <i>Accelerated Doubly Stochastic Gradient Descent for Tensor CP Decomposition</i>. Journal of Optimization Theory and Applications, 197(2), 665-704, 2023.
 			     [<a href="https://link.springer.com/article/10.1007/s10957-023-02193-5">paper</a>]  [<a href="https://github.com/nothing2wang/DS-MVR-Algorithm">code</a>]
                 </ul>
             </div>
@@ -115,9 +115,9 @@
         <div class="grid3-year"> <h3> 2022 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> Dunbiao Niu, Chengjing Wang<b>*</b>, Peipei Tang, <b>Qingsong Wang</b>, Enbin Song. <i>An efficient algorithm for a class of large-scale support vector machines exploiting hidden sparsity</i>. IEEE Transactions on Signal Processing, 70, 5608-5623, 2022.
+                    <li> Dunbiao Niu, Chengjing Wang<b>*</b>, Peipei Tang, <b>Qingsong Wang</b>, Enbin Song. <i>An Efficient Algorithm for a Class of Large-scale Support Vector Machines Exploiting Hidden Sparsity</i>. IEEE Transactions on Signal Processing, 70, 5608-5623, 2022.
 			    [<a href="https://ieeexplore.ieee.org/document/9947311">paper</a>] 
-                    <li> Yifan Shao, <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>Efficient methods for convex problems with Bregman Barzilai-Borwein step sizes</i>. Pacific Journal of Optimization, 18(2), 333-348, 2022.
+                    <li> Yifan Shao, <b>Qingsong Wang</b>, Deren Han<b>*</b>. <i>Efficient Methods for Convex Problems with Bregman Barzilai-Borwein Step Sizes</i>. Pacific Journal of Optimization, 18(2), 333-348, 2022.
 			    [<a href="http://www.yokohamapublishers.jp/online2/pjov18-2.html">paper</a>] 
 			    
                 </ul>
@@ -126,7 +126,7 @@
         <div class="grid3-year"> <h3> 2021 <h3> </div>
             <div class="grid3-content">
                 <ul>
-                    <li> <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Deren Han. <i>A momentum block-randomized stochastic algorithm for low-rank tensor CP decomposition</i>. Pacific Journal of Optimization, 17(3), 433-452, 2021.
+                    <li> <b>Qingsong Wang</b>, Chunfeng Cui<b>*</b>, Deren Han. <i>A Momentum Block-randomized Stochastic Algorithm for Low-rank Tensor CP Decomposition</i>. Pacific Journal of Optimization, 17(3), 433-452, 2021.
 			     [<a href="http://www.yokohamapublishers.jp/online2/pjov18-2.html">paper</a>] 
                 </ul>
             </div>
@@ -134,7 +134,7 @@
         <div class="grid3-year"> <h3> 2020 <h3> </div>
             <div class="grid3-content">
                 <ul>
-		    <li> <b>Qingsong Wang</b>,  Chengjing Wang<b>*</b>, Peipei Tang, Dunbiao Niu. <i>An inexact dual alternating direction method of multipliers for image decomposition and restoration</i>. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
+		    <li> <b>Qingsong Wang</b>,  Chengjing Wang<b>*</b>, Peipei Tang, Dunbiao Niu. <i>An Inexact Dual Alternating Direction Method of Multipliers for Image Decomposition and Restoration</i>. Asia-Pacific Journal of Operational Research, 37(04), 2040010, 2020.
 			    [<a href="https://worldscientific.com/doi/10.1142/S0217595920400102">paper</a>] 
 		    <li> 史冰冰, <b>王青松</b><b>*</b>. <i>基于对偶的不精确交替方向乘子法求解核范数正则化最小二乘问题</i>. 高校应用数学学报: A 辑, 35(2), 181-190, 2020.
 			     [<a href="https://www.zjujournals.com/amjcua/CN/abstract/abstract41396.shtml">paper</a>] 
