--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
 
                 <div class="col-md-8">
-                    <h4><b>A generalized inertial proximal alternating linearized minimization method for nonconvex nonsmooth problems </b></h4>
+                    <h4><b>A Generalized Inertial Proximal Alternating Linearized Minimization Method for Nonconvex Nonsmooth Problems </b></h4>
                     <h5> <b> Qingsong Wang </b>, Deren Han<b>*</b>. Applied Numerical Mathematics. 189, 66-87, 2023.</h5>
                     <h6>   
                         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0168927423000855">paper</a>] 
@@ -129,7 +129,7 @@
 			    </div>
 
 		        <div class="col-md-8">
-		            <h4><b>A Bregman proximal stochastic gradient method with extrapolation for nonconvex nonsmooth problems</b></h4>
+		            <h4><b>A Bregman Proximal Stochastic Gradient Method with Extrapolation for Nonconvex Nonsmooth Problems</b></h4>
 		            <h5> <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui<b>*</b>, Deren Han. Proceedings of the AAAI Conference on Artificial Intelligence, 38(14), 15580-15588, 2024. </h5>
 		            <h6>   
 		            	[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/29485">paper</a>] 
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="col-md-8">
-                    <h4><b> Inertial accelerated SGD algorithms for solving large-scale lower-rank tensor CP decomposition problems</b></h4>
+                    <h4><b> Inertial Accelerated SGD Algorithms for Solving Large-scale Lower-rank Tensor CP Decomposition Problems</b></h4>
                     <h5>  <b> Qingsong Wang </b>, Zehui Liu, Chunfeng Cui, Deren Han<b>*</b>. Journal of Computational and Applied Mathematics. 423, 114948, 2023. </h5>
                     <h6>   
                         [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0377042722005465">paper</a>] 
@@ -168,7 +168,7 @@
                 </div>
 
                 <div class="col-md-8">
-                    <h4><b>A momentum accelerated algorithm for ReLU-based nonlinear matrix decomposition</b></h4>
+                    <h4><b>A Momentum Accelerated Algorithm for ReLU-based Nonlinear Matrix Decomposition</b></h4>
                     <h5> <b> Qingsong Wang </b>, Chunfeng Cui<b>*</b>, Deren Han. IEEE Signal Processing Letters. 31, 2865-2869, 2024. </h5>
                     <h6>   
                         [<a href="https://ieeexplore.ieee.org/document/10706860">paper</a>] 
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="col-md-8">
-                    <h4><b>A Bregman stochastic method for nonconvex nonsmooth problem beyond global Lipschitz gradient continuity</b></h4>
+                    <h4><b>A Bregman Stochastic Method for Nonconvex Nonsmooth Problem Beyond Global Lipschitz Gradient Continuity</b></h4>
                     <h5> <b> Qingsong Wang </b>, Deren Han<b>*</b>. Optimization Methods and Software. 38 (5), 914-946, 2023.</h5>
                     <h6>   
                         [<a href="https://www.tandfonline.com/doi/abs/10.1080/10556788.2023.2189717">paper</a>] 
