--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 	</div>
 	<!--主要内容结束-->
-<a href="https://info.flagcounter.com/lef7"><img src="https://s01.flagcounter.com/count2/lef7/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+<a href="https://info.flagcounter.com/KiS0"><img src="https://s01.flagcounter.com/countxl/KiS0/bg_EDFFF7/txt_000000/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_0/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 	<div class="footer">
 		<p>Homepage of Qingsong Wang</p>
 	</div>
