--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
         <div class="grid3-year"> <h3> Preprints <h3> </div>
             <div class="grid3-content">
                 <ul>
-			<li> Chengcheng Yan, Jiawei Xu, <b>Qingsong Wang</b><b>*</b>, Zheng Peng. <i>Neural Network Training via Stochastic Alternating Minimization with Trainable Step Sizes</i>. ArXiv:2508.04193, 2025.
+			<li> Chengcheng Yan, Jiawei Xu, Zheng Peng, <b>Qingsong Wang</b><b>*</b>. <i>Neural Network Training via Stochastic Alternating Minimization with Trainable Step Sizes</i>. ArXiv:2508.04193, 2025.
 		<li>  Wenchao Xie, Jiawei Xu, Zheng Peng, <b>Qingsong Wang</b><b>*</b>. <i>Efficient QR-Based CP Decomposition Acceleration via Dimension Tree and Extrapolation</i>. ArXiv:2503.18759, 2025.
 			   [<a href="https://arxiv.org/abs/2503.18759">paper</a>] [<a href="https://github.com/youmengx658/ALS-QR-BRE">code</a>]
 		   <li>  <b>Qingsong Wang</b><b>*</b>. <i>An Accelerated Bregman Algorithm for ReLU-based Symmetric Matrix Decomposition</i>. ArXiv:2503.16846, 2025.
